# qtest-python-app

./: .codecov.yml  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGES.md  CHANGES_SUMMARY.md  CI_CD_IMPLEMENTATION.md  CONTRIBUTING.md  DELETE_FEATURE_IMPLEMENTATION.md  DELETE_FUNCTIONALITY.md  DELETE_FUNCTIONALITY_IMPLEMENTATION.md  DELETE_FUNCTIONALITY_SUMMARY.md  EXECUTIVE_SUMMARY.md  FEATURE_SUMMARY.md  FEATURE_SUMMARY.txt  IMPLEMENTATION_SUMMARY.md  INDEX.md  MANIFEST.in  Makefile  QUICK_START.md  README.md  README_DELETE_FEATURE.md  check_syntax.py  conftest.py  demo_delete.py  demo_delete_feature.py  demo_delete_functionality.py  pre-push.sh  pyproject.toml  pytest.ini  quick_test.py  requirements-dev.txt  requirements.txt  run_all_tests.py  run_ci_locally.sh  run_tests.py  run_verification.py  setup.cfg  (+15 more)
.amazonq/rules/: check_rules.md  review_scope.md
.github/: pull_request_template.md
.github/workflows/: dependency-update.yml  python-app.yml  scheduled-tests.yml  security.yml
config/: tasks.json  tasks.json.example
docs/: README.md  ci_cd_workflow.md  contributing.md  development.md  generate_html.py  index.md  installation.md
docs/api/: models.md  services.md  utils.md
docs/usage/: cli.md  web.md
scripts/: build_package.sh  run_tests.sh  setup_hooks.sh
src/: __init__.py  app.py  cli.py
src/models/: __init__.py  task.py  task_history.py
src/services/: __init__.py  history_service.py  task_service.py
src/tests/: test_task_service.py
src/utils/: __init__.py  exceptions.py
tests/: README.md  __init__.py  conftest.py  test_app.py  test_app_integration.py  test_basic.py  test_ci_workflow.py  test_cli.py  test_exceptions.py  test_integration.py  test_models.py  test_package.py  test_task.py  test_task_delete.py  test_task_model.py  test_task_service.py  test_ui_imports.py
